// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signup reducer should handle the correct state containing the current user 1`] = `
Object {
  "currentUser": Object {
    "data": Object {},
  },
  "isLoggedIn": false,
  "profile": Object {},
}
`;

exports[`Signup reducer should return the correct state 1`] = `
Object {
  "currentUser": Object {},
  "isLoggedIn": false,
  "profile": Object {},
}
`;

exports[`Signup reducer should return the correct state containing signup errors 1`] = `
Object {
  "data": Object {},
  "errors": Object {},
}
`;

exports[`Signup reducer should return the initial state 1`] = `
Object {
  "currentUser": Object {},
  "isLoggedIn": false,
  "profile": Object {},
}
`;
